Move vehicle encoded values into custom model (#2938)